backend/api/tests/integration/snapshots/integration__category__nested_overlapping.snap
---
source: tests/integration/category.rs
expression: body
---
{
  "categories": [
    {
      "id": "afbce03c-e90f-11ea-8281-cfde02f6b582",
      "user_scopes": [
        "Admin",
        "ManageAnimation"
      ],
      "name": "Parent",
      "children": [
        {
          "id": "ee749392-e90f-11ea-8281-67d19ffa6107",
          "user_scopes": [
            "ManageAnimation",
            "ManageEntry",
            "ManageSelfAsset"
          ],
          "name": "B",
          "created_at": "2020-08-28T09:22:02.261811Z",
          "updated_at": null
        },
        {
          "id": "e315d3b2-e90f-11ea-8281-73cd69c14821",
          "user_scopes": [],
          "name": "A",
          "children": [
            {
              "id": "01cff7d8-e910-11ea-8281-7f86c625a156",
              "user_scopes": [
                "Admin",
                "AdminAsset",
                "ManageImage"
              ],
              "name": "A.1",
              "created_at": "2020-08-28T09:22:34.737562Z",
              "updated_at": null
            }
          ],
          "created_at": "2020-08-28T09:21:43.186002Z",
          "updated_at": null
        }
      ],
      "created_at": "2020-08-28T09:20:17.039205Z",
      "updated_at": null
    },
    {
      "id": "e315d3b2-e90f-11ea-8281-73cd69c14821",
      "user_scopes": [],
      "name": "A",
      "children": [
        {
          "id": "01cff7d8-e910-11ea-8281-7f86c625a156",
          "user_scopes": [
            "Admin",
            "AdminAsset",
            "ManageImage"
          ],
          "name": "A.1",
          "created_at": "2020-08-28T09:22:34.737562Z",
          "updated_at": null
        }
      ],
      "created_at": "2020-08-28T09:21:43.186002Z",
      "updated_at": null
    }
  ]
}
