backend/api/tests/integration/snapshots/integration__category__nested_top_level.snap
---
source: tests/integration/category.rs
expression: body
---
{
  "categories": [
    {
      "id": "afbce03c-e90f-11ea-8281-cfde02f6b582",
      "user_scopes": [
        "Admin",
        "ManageAnimation"
      ],
      "name": "Parent",
      "created_at": "2020-08-28T09:20:17.039205Z",
      "updated_at": null
    }
  ]
}
